plugins {
	id 'net.fabricmc.fabric-loom' version "1.17.20"
	id 'maven-publish'
}

version = "$mod_version+build.$build_number-$minecraft_version"
group = maven_group

repositories {
	mavenCentral()
	mavenLocal()
	maven { url = 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
//	maven { url = 'https://server.bbkr.space/artifactory/libs-release/' }
	maven { url = 'https://repo.repsy.io/mvn/xxx_inaksis_xxx/inaksis' }
	maven { url = 'https://repo.codemc.org/repository/maven-public' }
	maven { url = 'https://maven.quiltmc.org/repository/release' }
	maven { url = 'https://maven.quiltmc.org/repository/snapshot' }
	maven { url = 'https://maven.minecraftforge.net/' }
	maven { url = 'https://maven.terraformersmc.com/' }
	maven { url = 'https://api.modrinth.com/maven' }
	maven { url = 'https://hephaestus.dev/release' }
	maven { url = 'https://maven.ryanliptak.com/' }
	maven { url = 'https://maven.wispforest.io' }
	maven { url = 'https://maven.shedaniel.me' }
	maven { url = 'https://mvn.devos.one/releases/' }
	maven { url = 'https://mvn.devos.one/snapshots/' }
	maven { url = 'https://jitpack.io' }
	maven { url = 'https://maven.isxander.dev/releases' }
	maven {
		url "https://maven.saps.dev/minecraft"
		content {
			includeGroup "dev.latvian.mods"
			includeGroup "dev.ftb.mods"
		}
	}
	maven { url = "https://maven.parchmentmc.net/" }
	maven {
		url "https://maven.firstdarkdev.xyz/snapshots"
	}
	maven {
		name = "sonatype-oss-snapshots1"
		url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
		mavenContent { snapshotsOnly() }
	}
	maven { url 'https://maven.nucleoid.xyz' }
	maven {
		name = "Gegy"
		url = uri("https://maven.gegy.dev/releases/")
	}
	maven { url = 'https://maven.siphalor.de' }
}

loom {
	accessWidenerPath = file("src/main/resources/obsidian.accesswidener")
}

configurations.configureEach {
	resolutionStrategy {
		force("net.fabricmc.fabric-api:fabric-api:0.159.1+26.3")
		force("net.fabricmc:fabric-loader:0.19.5")
		force("com.terraformersmc:modmenu:17.0.0-alpha.1")
	}
}

dependencies {
	implementation 'org.jetbrains:annotations:24.0.0'

	minecraft libs.minecraft

	implementation libs.fabric.loader

	implementation libs.fabric.api

//	runtimeOnly("com.terraformersmc:modmenu:17.0.0-beta.2")
//
//	implementation("com.terraformersmc:biolith-fabric:3.5.0-beta.3")

//	implementation include("io.github.cottonmc:Jankson-Fabric:12.0.0")

//	modImplementation (libs.owo.lib) {
//		noFapi
//		noFLoader
//		noCottonMC
//		noQuiltMC
//	}
//	include (libs.owo.sentinel) {
//		noFapi
//		noFLoader
//		noCottonMC
//		noQuiltMC
//	}

//	modImplementation ("io.wispforest:condensed_creative-fabric:${libs.versions.cct.get()}") {
//		noFapi
//		noFLoader
//		noCottonMC
//		noQuiltMC
//	}
//	modImplementation("io.wispforest:accessories-fabric:${libs.versions.accessories.get()}") {
//		noFapi
//		noFLoader
//		noCottonMC
//		noQuiltMC
//	}

//	implementation "dev.isxander:yet-another-config-lib:3.9.0+26.1-fabric"

	implementation "com.electronwill.night-config:core:${libs.versions.nc.get()}"
	implementation "com.electronwill.night-config:toml:${libs.versions.nc.get()}"
	implementation "com.electronwill.night-config:yaml:${libs.versions.nc.get()}"
	implementation "com.electronwill.night-config:hocon:${libs.versions.nc.get()}"

	implementation 'org.hjson:hjson:3.0.1'
	implementation "com.fasterxml.jackson.core:jackson-databind:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-toml:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-guava:${libs.versions.jackson.get()}"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${libs.versions.jackson.get()}"

	implementation("net.vampirestudios:packwright:1.0.3+build.1-26.3")

	implementation "com.ptsmods:devlogin:3.5"

//	include(implementation("eu.pb4:sgui:2.1.0+26.2"))
//	implementation(include("eu.pb4:placeholder-api:3.0.0-beta.2+26.1"))
	implementation 'com.github.coredex-source:TextPlaceholderAPI:26.2-SNAPSHOT'

	implementation("com.github.Chocohead:Fabric-ASM:v2.3") {
		exclude (group: "net.fabricmc.fabric-api")
	}
	include "com.github.Chocohead:Fabric-ASM:v2.3"
}

processResources {
	inputs.property 'version', version

	filesMatching('fabric.mod.json') {
		expand inputs.properties
	}
}

java {
	withSourcesJar()
	withJavadocJar()
	toolchain.languageVersion = JavaLanguageVersion.of(25)
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
	it.options.encoding = 'UTF-8'
}

compileJava {
	options.compilerArgs += '--enable-preview'
}

jar {
	from('LICENSE') {
		rename {
			"${it}_$archivesBaseName"
		}
	}
}

publishing {
	publications {
		mavenJava( MavenPublication ) {
			from components.java
		}
	}
	repositories {}
}
